--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap'); 
 
 @tailwind base;
 @tailwind components;
@@ -16,5 +17,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: black;
+}
+
+
+.photo-grid {
+    /* display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, 240px, 1fr);
+    grid-auto-rows: 240px; */
 }
